SHS-006-Adding AdminService Repository and setting up feign Client on UserService

--- a/configServer/src/main/resources/Configurations/gateway.yml
+++ b/configServer/src/main/resources/Configurations/gateway.yml
@@ -8,6 +8,10 @@ spring:
               uri: lb://user-service
               predicates:
                 - Path=/api/user-service/**
+            - id: admin-service
+              uri: lb://admin-service
+              predicates:
+                - Path=/api/admin-service/**
 server:
   port: 8080
 
