--- a/configServer/src/main/resources/Configurations/doctor-service.yml
+++ b/configServer/src/main/resources/Configurations/doctor-service.yml
@@ -1,3 +1,8 @@
+info:
+  app:
+    name: doctor-service
+    description: Doctor Service for SHS.
+    version: 1.0.0
 spring:
   data:
     mongodb:
@@ -8,3 +13,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
