--- a/configServer/src/main/resources/Configurations/user-service.yml
+++ b/configServer/src/main/resources/Configurations/user-service.yml
@@ -1,3 +1,8 @@
+info:
+  app:
+    name: user-service
+    description: User Service for SHS.
+    version: 1.0.0
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/userservice
@@ -21,3 +26,8 @@ eureka:
 app:
   secret-key: ${SECRET_KEY}
   expiration: ${EXPIRATION}
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
