SHS-010-Upgrade - Addend new services and configured DB SCHEMA + few funcions for Doctor s

--- a/configServer/src/main/resources/Configurations/gateway.yml
+++ b/configServer/src/main/resources/Configurations/gateway.yml
@@ -12,6 +12,14 @@ spring:
               uri: lb://admin-service
               predicates:
                 - Path=/api/admin-service/**
+            - id: doctor-service
+              uri: lb://doctor-service
+              predicates:
+                - Path=/api/doctor-service/**
+            - id: patient-service
+              uri: lb://patient-service
+              predicates:
+                - Path=/api/patient-service/**
 server:
   port: 8080
 
