SHS-011-Upgrade - .YAML files updated in config server for newly additions.

--- a/configServer/src/main/resources/Configurations/admin-service.yml
+++ b/configServer/src/main/resources/Configurations/admin-service.yml
@@ -6,7 +6,7 @@ info:
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/adminservice
+      uri: mongodb://localhost:27017/smart-healthcare-service
 server:
   port: 8011
 eureka:
