SHS-012-Added docker compose and updated yaml to run via docker all services up and running with KAFKA also configured -onto setting up services and functionality.

--- a/configServer/src/main/resources/Configurations/gateway.yml
+++ b/configServer/src/main/resources/Configurations/gateway.yml
@@ -26,6 +26,11 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
 app:
   secret-key: ${SECRET_KEY}
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
