--- a/configServer/src/main/resources/Configurations/eureka-server.yml
+++ b/configServer/src/main/resources/Configurations/eureka-server.yml
@@ -4,3 +4,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
