--- a/configServer/src/main/resources/Configurations/user-service.yml
+++ b/configServer/src/main/resources/Configurations/user-service.yml
@@ -5,7 +5,7 @@ info:
     version: 1.0.0
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/userservice
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/userservice
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASS}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -21,7 +21,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
 
 app:
   secret-key: ${SECRET_KEY}
