--- a/configServer/src/main/resources/Configurations/patient-service.yml
+++ b/configServer/src/main/resources/Configurations/patient-service.yml
@@ -7,8 +7,13 @@ spring:
   data:
     mongodb:
       uri: mongodb://${MONGO_HOST:localhost}:27017/smart-healthcare-service
+  kafka:
+    bootstrap-servers: ${KAFKA_HOST:localhost}:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 server:
-  port: 8011
+  port: 8013
 eureka:
   client:
     serviceUrl:
